--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Startup Launcher o melhor lugar para sua startup" />
     <meta name="keywords" content="MEI, Microempreendedor, Microempresario, MEI Encontre, MEIEncontre, Network, Rede, Negócios" />
     <meta name="author" content="MEI Encontre" />
-    <title>MEI Encontre</title>
+    <title>Startup Launcher</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' />
@@ -80,7 +80,7 @@
             <div class="row process-content">
                 <div class="left-side">
                     <div class="item service-box" data-item="1">
-                        <h3>Mapear necessidade do negócio</h3>
+                        <h3>Entender as necessidades do negócio</h3>
                         <p class="text-muted">Descoberta das necessidades de seu negócio e delimitação do escopo do site ou aplicativo.</p>
                     </div>
                     <div class="item service-box" data-item="2">
@@ -103,18 +103,18 @@
         </div>
     </section>
 
-    <!--<section class="bg-primary" id="sobre">
+    <section class="bg-primary" id="sobre">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                   	<h2 class="section-heading">Como funciona!!!</h2>
                     <hr class="primary light">
                     <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
                 </div>
             </div>
         </div>
-    </section>-->
+    </section>
 
     <section id="servicos">
         <div class="container">
@@ -130,28 +130,28 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-                        <h3>Desenvolvimento de software</h3>
+                        <h3>Desenvolvimento de apps e sites</h3>
                         <p class="text-muted">Our templates are updated regularly so they don't break.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>Ready to Ship</h3>
+                        <h3>Lançamento</h3>
                         <p class="text-muted">You can use this theme as is, or you can make changes!</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>Up to Date</h3>
+                        <h3>Infraestrutura</h3>
                         <p class="text-muted">We update dependencies to keep things fresh.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                        <h3>Made with Love</h3>
+                        <h3>Consultoria de TI</h3>
                         <p class="text-muted">You have to make your websites with love these days!</p>
                     </div>
                 </div>
@@ -260,7 +260,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Download</h2>
+                    <h2 class="section-heading">Lançados</h2>
                     <hr class="primary light">
                 </div>
             </div>
@@ -299,13 +299,13 @@
                         <h4>Social</h4>
                         <ul class="list-inline">
                             <li>
-                                <a href="https://www.facebook.com/MEI-Encontre-270491799970978"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                                <a href="https://www.facebook.com/startuplauncher/" target="_blank"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
                             </li>
                             <li>
-                                <a href="https://www.instagram.com/meiencontre"><i class="fa fa-instagram fa-fw fa-3x"></i></a>
+                                <a href="#"><i class="fa fa-instagram fa-fw fa-3x"></i></a>
                             </li>
                             <li>
-                                <a href="https://www.twitter.com/meiencontre"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                                <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
                             </li>
                         </ul>
                     </div>
