--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
 <head>
     <meta charset="utf-8" />
@@ -107,10 +107,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                   	<h2 class="section-heading">Como funciona!!!</h2>
+                   	<h2 class="section-heading">Como funciona!</h2>
                     <hr class="primary light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                    <p class="text-faded">Transformamos insights em projetos reais, com um processo muito simples e rapido, com apenas alguns passos viabilizamos projetos complexos. <br/>Entendemos e analisamos o projeto, criacao da Solucao e desenvolvimento de processos</p>
+                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Vamos</a>
                 </div>
             </div>
         </div>
@@ -131,28 +131,28 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
                         <h3>Desenvolvimento de apps e sites</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                        <p class="text-muted">Transformamos seus Insights</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
                         <h3>Lançamento</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                        <p class="text-muted">Lancamos para o Mundo!!!</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
                         <h3>Infraestrutura</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+                        <p class="text-muted">Extraimos toda a complexidade de construir grandes sistemas</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
                         <h3>Consultoria de TI</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
+                        <p class="text-muted">Acompahamos todo o andamento</p>
                     </div>
                 </div>
             </div>
@@ -260,7 +260,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Lançados</h2>
+                    <h2 class="section-heading">Plataformas Moveis</h2>
                     <hr class="primary light">
                 </div>
             </div>
