--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
                         <h3>Lançamento</h3>
-                        <p class="text-muted">Lancamos para o Mundo!!!</p>
+                        <p class="text-muted">Lançamos para o Mundo!!!</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -260,7 +260,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Plataformas Moveis</h2>
+                    <h2 class="section-heading">Plataformas Móveis</h2>
                     <hr class="primary light">
                 </div>
             </div>
