inclusao logo, ajustes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Startup Launcher</a>
+                <span class="navbar-brand page-scroll" href="#page-top">
+                    <object data="img/arrow_white_blue.svg" type="image/svg+xml" height="35px">
+                        <!--<img src="yourfallback.jpg" />-->
+                    </object>
+                </span>
+                <a class="navbar-brand page-scroll" href="#page-top">
+                    <span>Startup Launcher<span>
+                </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
