--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                    	<h2 class="section-heading">Como funciona!</h2>
                     <hr class="primary light">
                     <p class="text-faded">Transformamos insights em projetos reais, com um processo muito simples e rapido, com apenas alguns passos viabilizamos projetos complexos. <br/>Entendemos e analisamos o projeto, criacao da Solucao e desenvolvimento de processos</p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Vamos</a>
+<!--                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Vamos</a> -->
                 </div>
             </div>
         </div>
@@ -166,102 +166,102 @@
         </div>
     </section>
 
-    <section class="no-padding" id="portfolio">
-        <div class="container-fluid">
-            <div class="row no-gutter popup-gallery">
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/1.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/2.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/3.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
+<!--     <section class="no-padding" id="portfolio"> -->
+<!--         <div class="container-fluid"> -->
+<!--             <div class="row no-gutter popup-gallery"> -->
+<!--                 <div class="col-lg-4 col-sm-6"> -->
+<!--                     <a href="img/portfolio/fullsize/1.jpg" class="portfolio-box"> -->
+<!--                         <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt=""> -->
+<!--                         <div class="portfolio-box-caption"> -->
+<!--                             <div class="portfolio-box-caption-content"> -->
+<!--                                 <div class="project-category text-faded"> -->
+<!--                                     Category -->
+<!--                                 </div> -->
+<!--                                 <div class="project-name"> -->
+<!--                                     Project Name -->
+<!--                                 </div> -->
+<!--                             </div> -->
+<!--                         </div> -->
+<!--                     </a> -->
+<!--                 </div> -->
+<!--                 <div class="col-lg-4 col-sm-6"> -->
+<!--                     <a href="img/portfolio/fullsize/2.jpg" class="portfolio-box"> -->
+<!--                         <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt=""> -->
+<!--                         <div class="portfolio-box-caption"> -->
+<!--                             <div class="portfolio-box-caption-content"> -->
+<!--                                 <div class="project-category text-faded"> -->
+<!--                                     Category -->
+<!--                                 </div> -->
+<!--                                 <div class="project-name"> -->
+<!--                                     Project Name -->
+<!--                                 </div> -->
+<!--                             </div> -->
+<!--                         </div> -->
+<!--                     </a> -->
+<!--                 </div> -->
+<!--                 <div class="col-lg-4 col-sm-6"> -->
+<!--                     <a href="img/portfolio/fullsize/3.jpg" class="portfolio-box"> -->
+<!--                         <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt=""> -->
+<!--                         <div class="portfolio-box-caption"> -->
+<!--                             <div class="portfolio-box-caption-content"> -->
+<!--                                 <div class="project-category text-faded"> -->
+<!--                                     Category -->
+<!--                                 </div> -->
+<!--                                 <div class="project-name"> -->
+<!--                                     Project Name -->
+<!--                                 </div> -->
+<!--                             </div> -->
+<!--                         </div> -->
+<!--                     </a> -->
+<!--                 </div> -->
+<!--                 <div class="col-lg-4 col-sm-6"> -->
+<!--                     <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box"> -->
+<!--                         <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt=""> -->
+<!--                         <div class="portfolio-box-caption"> -->
+<!--                             <div class="portfolio-box-caption-content"> -->
+<!--                                 <div class="project-category text-faded"> -->
+<!--                                     Category -->
+<!--                                 </div> -->
+<!--                                 <div class="project-name"> -->
+<!--                                     Project Name -->
+<!--                                 </div> -->
+<!--                             </div> -->
+<!--                         </div> -->
+<!--                     </a> -->
+<!--                 </div> -->
+<!--                 <div class="col-lg-4 col-sm-6"> -->
+<!--                     <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box"> -->
+<!--                         <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt=""> -->
+<!--                         <div class="portfolio-box-caption"> -->
+<!--                             <div class="portfolio-box-caption-content"> -->
+<!--                                 <div class="project-category text-faded"> -->
+<!--                                     Category -->
+<!--                                 </div> -->
+<!--                                 <div class="project-name"> -->
+<!--                                     Project Name -->
+<!--                                 </div> -->
+<!--                             </div> -->
+<!--                         </div> -->
+<!--                     </a> -->
+<!--                 </div> -->
+<!--                 <div class="col-lg-4 col-sm-6"> -->
+<!--                     <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box"> -->
+<!--                         <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt=""> -->
+<!--                         <div class="portfolio-box-caption"> -->
+<!--                             <div class="portfolio-box-caption-content"> -->
+<!--                                 <div class="project-category text-faded"> -->
+<!--                                     Category -->
+<!--                                 </div> -->
+<!--                                 <div class="project-name"> -->
+<!--                                     Project Name -->
+<!--                                 </div> -->
+<!--                             </div> -->
+<!--                         </div> -->
+<!--                     </a> -->
+<!--                 </div> -->
+<!--             </div> -->
+<!--         </div> -->
+<!--     </section> -->
 
     <section id="download" class="bg-primary">
         <div class="container">
@@ -316,13 +316,14 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-lg-6 col-md-6">
-                        <h4>Assine nossa newsletter</h4>
-                        <p>Mantenha-se informado. Assine nossa newsletter (não enviaremos spam).</p>
+                    <div class="col-lg-2 col-md-6">
+                        <h4>Entre em contato</h4>
                         <div class="subscribe-form">
                             <form id="mc-form" class="group" novalidate="true">
-                                <input type="email" value="" name="dEmail" class="email" id="mc-email" placeholder="seu e-mail" required="">
-                                <input type="submit" name="subscribe">
+                                <input id="contactName" type="email" placeholder="nome" required>
+                                <input id="contactEmail" type="text" placeholder="e-mail" required>
+                                <textarea id="contactMessage" rows="3" cols="19" placeholder="detalhes sobre o projeto"></textarea>
+                                <button id="subscribe" name="subscribe">Enviar</button>
                                 <label for="mc-email" class="subscribe-message"></label>
                             </form>
                         </div>
